# Perception-of-Autonomous-mobile-robot

./: README.md
SC-LeGO-LOAM/LeGO-LOAM/include/: utility.h
SC-LeGO-LOAM/LeGO-LOAM/launch/: run.launch  test.rviz
cams_recorder/: CMakeLists.txt  package.xml
cams_recorder/launch/: video_record.launch
cams_recorder/nodes/: usb_cam_node.cpp
detector3d/: CMakeLists.txt  package.xml
detector3d/include/: DBSCAN_simple.h  depth_pointcloud.h  detect.h  include.h  kmeans.h  lidar_pointcloud.h
detector3d/launch/: run.launch
detector3d/msg/: objectsofonemat.msg
detector3d/src/: dealback.cpp  depth_pointcloud.cpp  detect.cpp  kmeans.cpp  lidar_pointcloud.cpp
fusion_perception/: CMakeLists.txt  package.xml
fusion_perception/include/fusion/: agnes.hpp  combine.hpp  fusion.hpp  mkn.hpp  projection.hpp
fusion_perception/include/kalman/: kalman.hpp
fusion_perception/include/matcher/: hungarian.hpp
fusion_perception/include/tracker/: tracker.hpp  tracker2d.hpp  tracker3d.hpp
fusion_perception/include/visualization/: visualization.hpp
fusion_perception/msg/: Frame.msg  Image.msg  Track.msg
fusion_perception/src/: fusion_node.cpp
livox_ros_driver/: CMakeLists.txt
livox_ros_driver/livox_ros_driver/: ldq.h  lds.cpp  lds.h  lds_lidar.cpp
object_detection/: CMakeLists.txt  package.xml
object_detection/engine/: road.txt
object_detection/include/object_detection/: common.hpp  detector.h
object_detection/launch/: Detection.launch
object_detection/msg/: Object.msg  Objects.msg
object_detection/src/: detector.cpp  yolo_node.cpp
pointcloud_process/: CMakeLists.txt  package.xml
pointcloud_process/include/cluster/: cluster.hpp
pointcloud_process/include/correct/: correct.h
pointcloud_process/include/map/: map.h  matrix.h
pointcloud_process/launch/: pointcloud_process.launch
pointcloud_process/rviz/: obstacle_avoidance.rviz  obstacle_avoidance1.rviz
pointcloud_process/src/: costmap_node.cpp  map.cpp  matrix.cpp  pointcloud_node.cpp  pointsCorrect.cpp
realsense_d435/: CMakeLists.txt
realsense_d435/launch/: start.launch
realsense_d435/src/: Publisher_realsense.cpp  Subscriber_realsense.cpp
sc-lego-loam/lego_loam/: CMakeLists.txt
sc-lego-loam/lego_loam/launch/: run.launch  test.rviz
sc-lego-loam/lego_loam/src/: featureAssociation.cpp  imageProjection.cpp  mapOptmization.cpp
serial_communication/: CMakeLists.txt  package.xml
serial_communication/include/: serial_node.h
serial_communication/launch/: start.launch
serial_communication/msg/: control_command.msg  sensor_data.msg
serial_communication/src/: serial_node.cpp  telop_key.cpp
sh/: data_recorder.sh  eval_local.py  eval_planning.py
xsens_ros_mti_driver/lib/xspublic/xscontroller/: xsconnectivitystate.d  xsdeviceconfiguration.d
xsens_ros_mti_driver/lib/xspublic/xstypes/: xsdatapacketptrarray.d  xsdeviceid.d  xsdeviceidarray.d  xsportinfo.d  xsportinfoarray.d  xssnapshot.d
xsens_ros_mti_driver/param/: xsens_mti_node.yaml
xsens_ros_mti_driver/src/: main.cpp  xdacallback.cpp  xdacallback.h  xdainterface.cpp  xdainterface.h
xsens_ros_mti_driver/src/messagepublishers/: accelerationpublisher.h  angularvelocitypublisher.h  freeaccelerationpublisher.h  gnsspublisher.h  imupublisher.h  magneticfieldpublisher.h  orientationincrementspublisher.h  orientationpublisher.h  packetcallback.h  positionllapublisher.h  pressurepublisher.h  temperaturepublisher.h  timereferencepublisher.h  transformpublisher.h  twistpublisher.h  velocityincrementpublisher.h  velocitypublisher.h
